# HPhi

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
docs/: Doxyfile  err  index.html  index_en.html  index_left_en.html  index_left_jp.html  index_right_en.html  index_right_jp.html  out  userguide.html
src/: CMakeLists.txt  CalcByFullDiag.cpp  CalcByLOBPCG.cpp  CalcByTEM.cpp  CalcByTPQ.cpp  CalcSpectrum.cpp  CalcSpectrumByBiCG.cpp  CalcSpectrumByFullDiag.cpp  CheckMPI.cpp  Doxyfile  ErrorMessage.cpp  FileIO.cpp  FirstMultiply.cpp  HPhiMain.cpp  HPhiTrans.cpp  LogMessage.cpp  Multiply.cpp  PairEx.cpp  PairExHubbard.cpp  PairExSpin.cpp  ProgressMessage.cpp  SingleEx.cpp  SingleExHubbard.cpp  bitcalc.cpp  check.cpp  dSFMT.cpp  diagonalcalc.cpp  eigenIO.cpp  expec_cisajs.cpp  expec_cisajscktaltdc.cpp  expec_energy_flct.cpp  expec_totalspin.cpp  global.cpp  input.cpp  lapack_diag.cpp  log.cpp  matrixlapack.cpp  matrixlapack_magma.cpp  matrixscalapack.cpp  mltply.cpp  (+17 more)
src/StdFace/: ChainLattice.cpp  FCOrtho.cpp  HoneycombLattice.cpp  Kagome.cpp  Ladder.cpp  Orthorhombic.cpp  Pyrochlore.cpp  SquareLattice.cpp  StdFace_ModelUtil.cpp  StdFace_ModelUtil.hpp  StdFace_main.cpp  StdFace_main.hpp  StdFace_vals.hpp  TriangularLattice.cpp  Wannier90.cpp
src/common/: setmemory.cpp  setmemory.hpp
src/include/: CalcByFullDiag.hpp  CalcByLOBPCG.hpp  CalcByTEM.hpp  CalcByTPQ.hpp  CalcSpectrum.hpp  CalcSpectrumByBiCG.hpp  CalcSpectrumByFullDiag.hpp  CalcTime.hpp  CheckMPI.hpp  Common.hpp  DefCommon.hpp  ErrorMessage.hpp  FileIO.hpp  FirstMultiply.hpp  HPhiMain.hpp  HPhiTrans.hpp  LogMessage.hpp  Multiply.hpp  PairEx.hpp  PairExHubbard.hpp  PairExSpin.hpp  SingleEx.hpp  SingleExHubbard.hpp  StdFace_main.hpp  bitcalc.hpp  check.hpp  dSFMT-params.hpp  dSFMT-params19937.hpp  dSFMT.hpp  defmodelBoost.hpp  diagonalcalc.hpp  eigenIO.hpp  expec_cisajs.hpp  expec_cisajscktaltdc.hpp  expec_energy_flct.hpp  expec_totalspin.hpp  global.hpp  input.hpp  lapack_diag.hpp  log.hpp  (+23 more)
src/komega/: komega.hpp  komega_bicg.F90
test/: fulldiag_genspin_ladder.sh  fulldiag_genspingc_ladder.sh  fulldiag_hubbard_chain.sh  fulldiag_hubbardgc_tri.sh  fulldiag_kondo_chain.sh  fulldiag_kondogc_chain.sh  fulldiag_spin_tri.sh  fulldiag_spingc_tri.sh  lobcg_genspin_ladder.sh  lobcg_genspin_ladder_restart.sh  lobcg_genspingc_ladder.sh  lobcg_hubbard_square.sh  lobcg_hubbard_square_restart.sh  lobcg_hubbardgc_tri.sh  lobcg_kondo_chain.sh  lobcg_kondo_chain_restart.sh  lobcg_kondogc_chain.sh  lobcg_spin_kagome.sh  lobcg_spin_kagome_restart.sh  lobcg_spingc_honey.sh  spectrum_genspin_ladder.sh  spectrum_genspingc_ladder.sh  spectrum_hubbard_square.sh  spectrum_hubbardgc_tri.sh  (+12 more)
(+477 files in other folders)
